Extract-Transform–Load Framework for Hana (ETL) truffle

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,3 +83,7 @@ name = "hana-rpc"
 [[bin]]
 path = "bin/hana-toolbox.rs"
 name = "hana-toolbox"
+
+[[bin]]
+path = "bin/blockhashes_stage.rs"
+name = "blockhashes_stage"
