Fix storage interhashes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,7 @@ http = "0.2"
 itertools = "0.10"
 lru = "0.7"
 maplit = "1"
-mdbx = { package = "libmdbx", version = "0.1" }
+mdbx = { git = "https://github.com/vorot93/mdbx-rs" }
 modular-bitfield = "0.11"
 num-bigint = "0.4"
 num-traits = "0.2"
@@ -63,7 +63,7 @@ sha2 = "0.9"
 sha3 = "0.9"
 string = { git = "https://github.com/vorot93/string", branch = "update-bytes" }
 structopt = "0.3"
-strum = { version = "0.23", features = ["derive"] }
+strum = { version = "0.22", features = ["derive"] }
 substrate-bn = "0.6"
 tempfile = "3"
 thiserror = "1"
@@ -80,10 +80,6 @@ tracing-futures = "0.2"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 triehash = "0.8"
 walkdir = "2"
-
-[build-dependencies]
-anyhow = "1"
-vergen = "5"
 
 [dev-dependencies]
 bytes-literal = { git = "https://github.com/vorot93/bytes-literal" }
