--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,69 +8,42 @@ license = "Apache-2.0"
 default-run = "hana"
 
 [dependencies]
-aes = "0.8"
 anyhow = "1"
 arrayref = "0.3"
-arrayvec = { version = "0.7", features = ["serde"] }
-array-init = "2"
+arrayvec = "0.7"
 async-recursion = "1"
 async-stream = "0.3"
 async-trait = "0.1"
 auto_impl = "0.5"
-block-padding = "0.3"
 byte-unit = "4"
-byteorder = "1"
-bytes = { version = "1", features = ["serde"] }
+bytes = "1"
 bytes-literal = { git = "https://github.com/vorot93/bytes-literal" }
 bytesize = "1"
-chrono = "0.4"
-cidr = "0.2"
-cipher = { version = "0.4", features = ["block-padding"] }
 clap = { version = "3", features = ["derive"] }
 croaring = { git = "https://github.com/vorot93/croaring-rs", branch = "staging" }
-crossterm = { version = "0.23", optional = true }
-ctr = "0.9"
-data-encoding = "2"
+crossterm = { version = "0.22", optional = true }
 derive_more = "0.99"
-digest = "0.10"
 directories = "4.0"
 educe = { version = "0.4", features = ["Debug", "Default"] }
-enr = { version = "0.5", default-features = false, features = [
-    "rust-secp256k1",
-] }
-enum-as-inner = "0.4"
-enum-primitive-derive = "0.2"
 ethash = { git = "https://github.com/rust-ethereum/ethash", branch = "ethnum" }
-ethereum-forkid = "0.7.0"
-ethereum-interfaces = { git = "https://github.com/ledgerwatch/interfaces", features = [
+ethereum-interfaces = { git = "https://github.com/ledgerwatch/interfaces", branch = "vorot93/ethnum", features = [
     "remotekv",
     "sentry",
 ] }
-ethereum-types = { version = "0.13", features = ["codec"] }
+ethereum-types = { version = "0.12", features = ["codec"] }
 ethnum = { git = "https://github.com/vorot93/ethnum-rs", branch = "staging", features = [
     "llvm-intrinsics",
     "rlp",
     "scale",
 ] }
-fdlimit = "0.2"
+evmodin = { git = "https://github.com/vorot93/evmodin", branch = "hana-staging" }
 futures-core = "0.3"
-futures-intrusive = "0.4"
-futures-sink = "0.3"
 futures-util = "0.3"
-gen-iter = "0.2"
-generic-array = "0.14"
-getset = "0.1"
 hash-db = "0.15"
 hash256-std-hasher = "0.15"
 hex = "0.4"
 hex-literal = "0.3"
-hmac = "0.12"
 http = "0.2"
-i256 = { git = "https://github.com/vorot93/rust-i256", branch = "ethnum-2" }
-igd = { git = "https://github.com/stevefan1999-personal/rust-igd", features = [
-    "aio",
-    "tokio1",
-] }
 itertools = "0.10"
 jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee", features = [
     "server",
@@ -84,74 +57,49 @@ num-bigint = "0.4"
 num_cpus = "1.13"
 num-traits = "0.2"
 once_cell = "1"
-parity-scale-codec = { version = "3", features = ["bytes"] }
-parking_lot = "0.12"
-primitive-types = { version = "0.11", default-features = false, features = [
-    "rlp",
-    "rustc-hex",
-] }
+parity-scale-codec = { version = "2", features = ["bytes"] }
+parking_lot = "0.11"
 rand = "0.8"
 rayon = "1"
 ripemd = "0.1"
 rlp = "0.5"
 rlp-derive = "0.1"
 ron = "0.7"
-secp256k1 = { version = "0.22", features = [
-    "global-context",
-    "rand-std",
-    "recovery",
-] }
+secp256k1 = { version = "0.21", features = ["global-context", "recovery"] }
 serde = "1"
 serde_json = "1"
 serde_with = "1"
 sha2 = "0.10"
 sha3 = "0.10"
-snap = "1"
 string = { git = "https://github.com/carllerche/string" }
-strum = { version = "0.24", features = ["derive"] }
-strum_macros = "0.24"
-stubborn-io = "0.3"
+strum = { version = "0.23", features = ["derive"] }
 substrate-bn = "0.6"
 tempfile = "3"
-task-group = { git = "https://github.com/vorot93/task-group" }
 thiserror = "1"
 tokio = { version = "1", features = ["full"] }
 tokio-stream = { version = "0.1", features = ["sync"] }
-tokio-util = { version = "0.7", features = ["codec"] }
-toml = { version = "0.5", features = ["preserve_order"] }
+toml = "0.5"
 tonic = { version = "0.6", default-features = false, features = [
     "codegen",
     "prost",
     "transport",
 ] }
-tonic-health = "0.5"
 tracing = "0.1"
 tracing-futures = "0.2"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 triehash = "0.8"
-trust-dns-resolver = "0.21"
-url = "2"
-uuid = { version = "0.8", features = ["v4"] }
 walkdir = "2"
 
 [build-dependencies]
 anyhow = "1"
-vergen = "7"
+vergen = "6"
 
 [dev-dependencies]
 bytes-literal = { git = "https://github.com/vorot93/bytes-literal" }
-criterion = { version = "0.3", default-features = false }
-include_dir = "0.7"
-pprof = { version = "0.7", features = ["flamegraph"] }
 proptest = "1.0.0"
-rand = { version = "0.8", features = ["std"] }
 tokio = { version = "1", features = ["full"] }
 tokio-test = "0.4.2"
-
-[patch.crates-io]
-enr = { git = "https://github.com/rust-ethereum/enr", branch = "vorot93/update-deps" }
-ethnum = { git = "https://github.com/vorot93/ethnum-rs", branch = "staging" }
-arrayvec = { git = "https://github.com/vorot93/arrayvec", branch = "pop-unchecked" }
+fdlimit = "0.2"
 
 [[bin]]
 path = "bin/hana.rs"
@@ -162,10 +110,6 @@ path = "bin/hana-rpc.rs"
 name = "hana-rpc"
 
 [[bin]]
-path = "bin/hana-sentry.rs"
-name = "hana-sentry"
-
-[[bin]]
 path = "bin/hana-toolbox.rs"
 name = "hana-toolbox"
 
@@ -173,17 +117,10 @@ name = "hana-toolbox"
 path = "bin/consensus-tests.rs"
 name = "consensus-tests"
 
-[[bench]]
-name = "bench"
-path = "./src/execution/evm/benches/bench.rs"
-harness = false
+[patch.crates-io]
+parity-scale-codec = { git = "https://github.com/paritytech/parity-scale-codec" }
 
 [profile.production]
 inherits = "release"
-panic = "abort"
-codegen-units = 1
-lto = true
-
-[profile.bench]
 codegen-units = 1
 lto = true
