--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,14 +40,13 @@ ethnum = { git = "https://github.com/vorot93/ethnum-rs", branch = "staging", fea
 ] }
 futures-core = "0.3"
 futures-util = "0.3"
-gen-iter = "0.2"
 getset = "0.1"
 hash-db = "0.15"
 hash256-std-hasher = "0.15"
 hex = "0.4"
 hex-literal = "0.3"
 http = "0.2"
-i256 = { git = "https://github.com/vorot93/rust-i256", branch = "ethnum-2" }
+i256 = { git = "https://github.com/vorot93/rust-i256", branch = "ethnum" }
 itertools = "0.10"
 jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee", features = [
     "server",
@@ -83,7 +82,7 @@ tempfile = "3"
 thiserror = "1"
 tokio = { version = "1", features = ["full"] }
 tokio-stream = { version = "0.1", features = ["sync"] }
-toml = { version = "0.5", features = ["preserve_order"] }
+toml = "0.5"
 tonic = { version = "0.6", default-features = false, features = [
     "codegen",
     "prost",
@@ -101,18 +100,13 @@ vergen = "6"
 
 [dev-dependencies]
 bytes-literal = { git = "https://github.com/vorot93/bytes-literal" }
-criterion = { version = "0.3", default-features = false }
-include_dir = "0.7"
-pprof = { version = "0.6", features = ["flamegraph"] }
 proptest = "1.0.0"
-rand = { version = "0.8", features = ["std"] }
 tokio = { version = "1", features = ["full"] }
 tokio-test = "0.4.2"
 fdlimit = "0.2"
 
 [patch.crates-io]
 ethnum = { git = "https://github.com/vorot93/ethnum-rs", branch = "staging" }
-arrayvec = { git = "https://github.com/vorot93/arrayvec", branch = "pop-unchecked" }
 
 [[bin]]
 path = "bin/hana.rs"
@@ -130,17 +124,7 @@ name = "hana-toolbox"
 path = "bin/consensus-tests.rs"
 name = "consensus-tests"
 
-[[bench]]
-name = "bench"
-path = "./src/execution/evm/benches/bench.rs"
-harness = false
-
 [profile.production]
 inherits = "release"
-panic = "abort"
-codegen-units = 1
-lto = true
-
-[profile.bench]
 codegen-units = 1
 lto = true
