--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,7 +79,10 @@ igd = { git = "https://github.com/stevefan1999-personal/rust-igd", features = [
     "tokio1",
 ] }
 itertools = "0.10"
-jsonrpsee = { version = "0.10", features = ["server", "macros"] }
+jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee", features = [
+    "server",
+    "macros",
+] }
 lru = "0.7"
 maplit = "1"
 mdbx = { package = "libmdbx", version = "0.1" }
@@ -109,7 +112,7 @@ serde_with = "1"
 sha2 = "0.10"
 sha3 = "0.10"
 snap = "1"
-string = "0.3"
+string = { git = "https://github.com/carllerche/string" }
 strum = { version = "0.24", features = ["derive"] }
 strum_macros = "0.24"
 stubborn-io = "0.3"
