--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,8 +60,10 @@ fastrlp = { version = "0.1", features = [
     "std",
 ] }
 fdlimit = "0.2"
-futures = { version = "0.3", features = ["unstable"] }
+futures-core = "0.3"
 futures-intrusive = "0.4"
+futures-sink = "0.3"
+futures-util = "0.3"
 gen-iter = "0.2"
 generic-array = "0.14"
 getset = "0.1"
@@ -77,7 +79,7 @@ igd = { git = "https://github.com/stevefan1999-personal/rust-igd", features = [
     "tokio1",
 ] }
 itertools = "0.10"
-jsonrpsee = { version = "0.11", features = ["server", "macros"] }
+jsonrpsee = { version = "0.10", features = ["server", "macros"] }
 lru = "0.7"
 maplit = "1"
 mdbx = { package = "libmdbx", version = "0.1" }
@@ -130,16 +132,8 @@ tracing-futures = "0.2"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 trust-dns-resolver = "0.21"
 url = "2"
-uuid = { version = "1", features = ["v4"] }
+uuid = { version = "0.8", features = ["v4"] }
 walkdir = "2"
-hashlink = "0.8.0"
-hashbrown = { version = "0.12.0", features = [
-    "inline-more",
-    "nightly",
-    "ahash-compile-time-rng",
-] }
-crossbeam = { version = "0.8.1", features = ["nightly"] }
-crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam" }
 
 [build-dependencies]
 anyhow = "1"
@@ -149,7 +143,7 @@ vergen = "7"
 bytes-literal = { git = "https://github.com/vorot93/bytes-literal" }
 criterion = { version = "0.3", default-features = false }
 include_dir = "0.7"
-pprof = { version = "0.8", features = ["flamegraph"] }
+pprof = { version = "0.7", features = ["flamegraph"] }
 proptest = "1.0.0"
 rand = { version = "0.8", features = ["std"] }
 tokio = { version = "1", features = ["full"] }
