--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,8 +60,10 @@ fastrlp = { version = "0.1", features = [
     "std",
 ] }
 fdlimit = "0.2"
-futures = { version = "0.3", features = ["unstable"] }
+futures-core = "0.3"
 futures-intrusive = "0.4"
+futures-sink = "0.3"
+futures-util = "0.3"
 gen-iter = "0.2"
 generic-array = "0.14"
 getset = "0.1"
@@ -132,14 +134,6 @@ trust-dns-resolver = "0.21"
 url = "2"
 uuid = { version = "1", features = ["v4"] }
 walkdir = "2"
-hashlink = "0.8.0"
-hashbrown = { version = "0.12.0", features = [
-    "inline-more",
-    "nightly",
-    "ahash-compile-time-rng",
-] }
-crossbeam = { version = "0.8.1", features = ["nightly"] }
-crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam" }
 
 [build-dependencies]
 anyhow = "1"
