--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,15 +11,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
+      - uses: actions/checkout@v3
+
+      - run: sudo apt-get install -y libext2fs-dev
 
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: nightly-2022-05-15
-          override: true
           components: rustfmt, clippy
 
       - uses: actions-rs/cargo@v1
@@ -27,10 +25,11 @@ jobs:
           command: fmt
           args: --all -- --check
 
-      - uses: actions-rs/cargo@v1
+      - uses: actions-rs/install@v0.1
         with:
-          command: install
-          args: cargo-hack
+          crate: cargo-hack
+          version: latest
+          use-tool-cache: true
 
       - uses: actions-rs/cargo@v1
         with:
@@ -46,10 +45,10 @@ jobs:
         with:
           command: test
 
-      - uses: actions-rs/cargo@v1
+      - uses: actions-rs/clippy-check@v1
         with:
-          command: clippy
-          args: --workspace --all-targets -- -D warnings
+          token: ${{ secrets.GITHUB_TOKEN }}
+          args: --all-features
 
       - uses: actions/checkout@v2
         with:
