--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,8 +27,7 @@ chrono = "0.4"
 cidr = "0.2"
 cipher = { version = "0.4", features = ["block-padding"] }
 clap = { version = "3", features = ["derive"] }
-croaring = { git = "https://github.com/vorot93/croaring-rs", branch = "staging" }
-crossterm = { version = "0.23", optional = true }
+croaring = { git = "https://github.com/saulius/croaring-rs" }
 ctr = "0.9"
 data-encoding = "2"
 derive_more = "0.99"
@@ -36,23 +35,25 @@ digest = "0.10"
 directories = "4.0"
 educe = { version = "0.4", features = ["Debug", "Default"] }
 enr = { version = "0.6", default-features = false, features = [
-    "rust-secp256k1",
+  "rust-secp256k1",
 ] }
 enum-primitive-derive = "0.2"
 ethash = { git = "https://github.com/rust-ethereum/ethash" }
 ethereum-forkid = "0.8.0"
 ethereum-interfaces = { git = "https://github.com/ledgerwatch/interfaces", features = [
-    "remotekv",
-    "sentry",
+  "remotekv",
+  "sentry",
 ] }
 ethereum-types = { version = "0.13", features = ["codec"] }
-ethereum-jsonrpc = { git = "https://github.com/rust-ethereum/jsonrpc" }
+ethereum-jsonrpc = { git = "https://github.com/rust-ethereum/jsonrpc", features = [
+  "server",
+] }
 ethnum = { version = "1", features = ["llvm-intrinsics", "rlp", "scale"] }
 fastrlp = { version = "0.1", features = [
-    "derive",
-    "ethereum-types",
-    "ethnum",
-    "std",
+  "derive",
+  "ethereum-types",
+  "ethnum",
+  "std",
 ] }
 fdlimit = "0.2"
 futures = { version = "0.3", features = ["unstable"] }
@@ -66,13 +67,13 @@ hex = "0.4"
 hex-literal = "0.3"
 hmac = "0.12"
 http = "0.2"
-i256 = { git = "https://github.com/vorot93/rust-i256", branch = "ethnum-2" }
+i256 = { git = "https://github.com/vorot93/rust-i256" }
 igd = { git = "https://github.com/stevefan1999-personal/rust-igd", features = [
-    "aio",
-    "tokio1",
+  "aio",
+  "tokio1",
 ] }
 itertools = "0.10"
-jsonrpsee = { version = "0.13", features = ["server", "macros"] }
+jsonrpsee = { version = "0.14", features = ["server"] }
 lru = "0.7"
 maplit = "1"
 mdbx = { package = "libmdbx", version = "0.1" }
@@ -84,17 +85,17 @@ once_cell = "1"
 parity-scale-codec = { version = "3", features = ["bytes"] }
 parking_lot = "0.12"
 primitive-types = { version = "0.11", default-features = false, features = [
-    "rlp",
-    "rustc-hex",
+  "rlp",
+  "rustc-hex",
 ] }
 rand = "0.8"
 rayon = "1"
 ripemd = "0.1"
 ron = "0.7"
-secp256k1 = { version = "0.22", features = [
-    "global-context",
-    "rand-std",
-    "recovery",
+secp256k1 = { version = "0.23", features = [
+  "global-context",
+  "rand-std",
+  "recovery",
 ] }
 serde = "1"
 serde_json = "1"
@@ -116,9 +117,9 @@ tokio-stream = { version = "0.1", features = ["sync"] }
 tokio-util = { version = "0.7", features = ["codec"] }
 toml = { version = "0.5", features = ["preserve_order"] }
 tonic = { version = "0.7", default-features = false, features = [
-    "codegen",
-    "prost",
-    "transport",
+  "codegen",
+  "prost",
+  "transport",
 ] }
 tonic-health = "0.6"
 tracing = "0.1"
@@ -130,11 +131,14 @@ uuid = { version = "1", features = ["v4"] }
 walkdir = "2"
 hashlink = "0.8.0"
 hashbrown = { version = "0.12.0", features = [
-    "inline-more",
-    "nightly",
-    "ahash-compile-time-rng",
+  "inline-more",
+  "nightly",
+  "ahash-compile-time-rng",
 ] }
 dashmap = "5.3"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+e2p-fileflags = { git = "https://github.com/michaellass/e2p-fileflags" }
 
 [features]
 default = []
@@ -148,7 +152,7 @@ vergen = "7"
 bytes-literal = { git = "https://github.com/vorot93/bytes-literal" }
 criterion = { version = "0.3", default-features = false }
 include_dir = "0.7"
-pprof = { version = "0.9", features = ["flamegraph"] }
+pprof = { version = "0.10", features = ["flamegraph"] }
 proptest = "1.0.0"
 rand = { version = "0.8", features = ["std"] }
 tokio = { version = "1.18", features = ["full"] }
@@ -158,7 +162,7 @@ triehash = "0.8"
 [patch.crates-io]
 arrayvec = { git = "https://github.com/vorot93/arrayvec", branch = "pop-unchecked" }
 enr = { git = "https://github.com/rust-ethereum/enr" }
-ethnum = { git = "https://github.com/vorot93/ethnum-rs", branch = "staging" }
+ethnum = { git = "https://github.com/vorot93/ethnum-rs", branch = "impls" }
 
 [[bin]]
 path = "bin/hana.rs"
