--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ chrono = "0.4"
 cidr = "0.2"
 cipher = { version = "0.4", features = ["block-padding"] }
 clap = { version = "3", features = ["derive"] }
-croaring = { git = "https://github.com/vorot93/croaring-rs", branch = "staging" }
+croaring = { git = "https://github.com/saulius/croaring-rs" }
 crossterm = { version = "0.23", optional = true }
 ctr = "0.9"
 data-encoding = "2"
@@ -46,7 +46,9 @@ ethereum-interfaces = { git = "https://github.com/ledgerwatch/interfaces", featu
   "sentry",
 ] }
 ethereum-types = { version = "0.13", features = ["codec"] }
-ethereum-jsonrpc = { git = "https://github.com/rust-ethereum/jsonrpc" }
+ethereum-jsonrpc = { git = "https://github.com/rust-ethereum/jsonrpc", features = [
+  "server",
+] }
 ethnum = { version = "1", features = ["llvm-intrinsics", "rlp", "scale"] }
 fastrlp = { version = "0.1", features = [
   "derive",
@@ -72,7 +74,7 @@ igd = { git = "https://github.com/stevefan1999-personal/rust-igd", features = [
   "tokio1",
 ] }
 itertools = "0.10"
-jsonrpsee = { version = "0.14", features = ["server", "macros"] }
+jsonrpsee = { version = "0.14", features = ["server"] }
 lru = "0.7"
 maplit = "1"
 mdbx = { package = "libmdbx", version = "0.1" }
@@ -91,7 +93,7 @@ rand = "0.8"
 rayon = "1"
 ripemd = "0.1"
 ron = "0.7"
-secp256k1 = { version = "0.22", features = [
+secp256k1 = { version = "0.23", features = [
   "global-context",
   "rand-std",
   "recovery",
@@ -151,7 +153,7 @@ vergen = "7"
 bytes-literal = { git = "https://github.com/vorot93/bytes-literal" }
 criterion = { version = "0.3", default-features = false }
 include_dir = "0.7"
-pprof = { version = "0.9", features = ["flamegraph"] }
+pprof = { version = "0.10", features = ["flamegraph"] }
 proptest = "1.0.0"
 rand = { version = "0.8", features = ["std"] }
 tokio = { version = "1.18", features = ["full"] }
