--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,9 +46,7 @@ ethereum-interfaces = { git = "https://github.com/ledgerwatch/interfaces", featu
   "sentry",
 ] }
 ethereum-types = { version = "0.13", features = ["codec"] }
-ethereum-jsonrpc = { git = "https://github.com/rust-ethereum/jsonrpc", features = [
-  "server",
-] }
+ethereum-jsonrpc = { git = "https://github.com/rust-ethereum/jsonrpc" }
 ethnum = { version = "1", features = ["llvm-intrinsics", "rlp", "scale"] }
 fastrlp = { version = "0.1", features = [
   "derive",
@@ -74,7 +72,7 @@ igd = { git = "https://github.com/stevefan1999-personal/rust-igd", features = [
   "tokio1",
 ] }
 itertools = "0.10"
-jsonrpsee = { version = "0.14", features = ["server"] }
+jsonrpsee = { version = "0.14", features = ["server", "macros"] }
 lru = "0.7"
 maplit = "1"
 mdbx = { package = "libmdbx", version = "0.1" }
