Update deps, crate description CompilerProject

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "hana"
 version = "0.1.0"
 authors = ["Peggy Liang <pgl1998@proton.me>"]
 edition = "2021"
-description = "Ethereum client based on turbo-geth client architecture"
+description = "Next-generation Ethereum implementation"
 license = "GPL-3.0-only"
 default-run = "hana"
 
